# LearningPath

./: .gitignore  LICENSE  README.md
2021/Stepik_Basics-of-Statistics/: Readme.md  part_1.ipynb  week_1.ipynb  week_2.ipynb  (+1 more)
2023/YAlgo/: README.html  README.md  pyproject.toml
2023/YAlgo/checker/: main.py
2023/YAlgo/checker/day_1/task_1/: _desc.md  in_2.txt  out_1.txt  out_2.txt  solution.py
2023/YAlgo/checker/day_1/task_2/: _desc.md  in_1.txt  in_2.txt  solution.py
2023/YAlgo/checker/day_1/task_3/: _desc.rst  in_1.txt  in_2.txt  solution.CPP  solution.py
2023/YAlgo/checker/day_1/task_4/: _desc.rst  in_1.txt  in_2.txt  solution.py
2023/YAlgo/checker/day_1/task_5/: _desc.rst  solution.py
2023/YAlgo/checker/day_1/task_6/: _desc.rst  in_1.txt  in_2.txt  solution.py
2023/YAlgo/checker/day_1/task_7/: _desc.rst  in_1.txt  in_2.txt  out_1.txt  out_2.txt  solution.CPP  solution.py
2023/YAlgo/checker/day_1/task_8/: _desc.rst  in_1.txt  in_2.txt  out_1.txt  out_2.txt  solution.py
2023/YAlgo/checker/day_2/: README.md  index.html
2023/YAlgo/checker/day_2/task_11/: _desc.rst  in_1.txt  in_2.txt  in_3.txt  in_4.txt  in_5.txt  out_1.txt  out_2.txt  out_3.txt  out_4.txt  out_5.txt  solution.py
2023/YAlgo/checker/day_2/task_12/: _desc.rst  in_1.txt  in_2.txt  solution.py
2023/YAlgo/checker/day_2/task_13/: _desc.rst  in_1.txt  out_1.txt  solution.py
2023/YAlgo/checker/day_2/task_14/: _desc.rst  in_2.txt  solution.py
2023/YAlgo/checker/day_2/task_15/: _desc.rst  in_1.txt  out_1.txt  solution.py
2023/YAlgo/checker/task_tmp/: _desc.rst  solution.py
(+32 files in other folders)
